Java和JavaScrip互通验签及加解密(SM3, AES, 3DES)